# rust-backend-proto

./: Cargo.toml  diesel.toml
migrations/2024-09-26-164106_get_users/: up.sql
migrations/2024-10-07-114705_get_users/: up.sql
src/: actions.rs  main.rs  models.rs  schema.rs  users_service.rs
