[package]
name = "rust-backend-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "2.1", features = ["postgres", "r2d2"] }
dotenv = "0.15"
r2d2 = "0.8"
uuid = { version = "1.5", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"