[package]
name = "rust-backend-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "2", features = ["postgres", "r2d2", "uuid"] }
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
uuid = { version = "1.5", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
